<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:backgroundTint="#FFFFFF"
    android:textAlignment="center"
    android:textDirection="firstStrong"
    tools:context=".MainActivity2">

    <Button
        android:id="@+id/buttonatras1"
        android:layout_width="123dp"
        android:layout_height="51dp"
        android:backgroundTint="#7CB342"
        android:text="REGRESAR"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.175"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.937" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="375dp"
        android:layout_height="49dp"
        android:text="HISTORIA DE LA CALCULADORA"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textColorHint="#000000"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.049" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="376dp"
        android:layout_height="317dp"
        android:text="La historia de la calculadora se remonta a la antigüedad, con dispositivos primitivos utilizados para realizar cálculos básicos. Sin embargo, el desarrollo significativo de las calculadoras modernas comenzó en el siglo XVII con inventores como Blaise Pascal, quien creó la primera máquina de sumar mecánica. Luego, en el siglo XIX, Charles Babbage diseñó la &quot;Máquina Diferencial&quot;, un dispositivo mecánico para calcular funciones polinómicas."
        android:textAlignment="viewStart"
        android:textColor="#000000"
        android:textColorHint="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.571"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.248" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="296dp"
        android:layout_height="210dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.777"
        app:srcCompat="@drawable/calculadoraantigua" />

    <Button
        android:id="@+id/buttonsiguiente1"
        android:layout_width="126dp"
        android:layout_height="51dp"
        android:backgroundTint="#7CB342"
        android:text="AVANZAR"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.831"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.936" />
</androidx.constraintlayout.widget.ConstraintLayout>