...
        app:layout_constraintHorizontal_bias="0.133"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.922" />

    <Button
        android:id="@+id/buttonsiguiente2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#7CB342"
        android:text="AVANZAR"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
...
