...
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.076" />

    <Button
        android:id="@+id/buttonatras3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#7CB342"
        android:text="REGRESAR"
        android:textColor="#000000"
        android:textColorHint="#000000"
...
